2014-10-31  Jan Djärv  <jan.h.d@swipnet.se>

	* macfont.m (macfont_glyph_extents): Turn off syntetic bold
	if force_integral_p (i.e. no antialias).
	(macfont_draw): Check ns_antialias_text, also turn off syntetic
	bold if no antialias (Bug#18876).

	* emacs.c (main): Don't chdir to $HOME on Cocoa if --chdir
	was given (Bug#18846).

2014-10-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (ns_set_doc_edited): Declare taking no args.

	* nsfns.m (ns_set_doc_edited): Do all logic (check frames) here
	instead of in xdisp.c, function now takes void. (Bug#18884).

	* xdisp.c (prepare_menu_bars): Remove HAVE_NS code.
	(redisplay_internal): Call ns_set_doc_edited if HAVE_NS (Bug#18884).

	* nsterm.h (EmacsScroller): Replace Lisp_Object win with
	struct window* (Bug#18889).
	Remove getMouseMotionPart.
	(ns_output): Make icon_top/left int.

	* nsfns.m (x_icon): icon_top/left is int.

	* nsterm.m (ns_mouse_position): Remove unused code.
	(initFrame:window:, dealloc): Use window instead of win.
	(getMouseMotionPart:window:x:y:): Remove, unused.
	(sendScrollEventAtLoc:fromEvent:): Make Lisp_Object win from window.

2014-10-30  Samuel Bronson  <naesten@gmail.com>

	* unexmacosx.c (copy_data_segment): Port to GCC 4.6+ (Bug#9927).

2014-10-28  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name): Use make_unibyte_string, not
	build_string, when importing a home directory.  (Bug#18873)

2014-10-26  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Use
	WINDOW_WANTS_HEADER_LINE_P, not WINDOW_WANTS_MODELINE_P, to
	account for the header-line height.  (Bug#18839)

2014-10-22  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (draw_glyphs): Set clipping to highlight boundaries.
	[Backport]
	(erase_phys_cursor): Fix confusion between window-relative and
	text area-relative x-coordinates.  [Backport]

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* minibuf.c (history-length): Increase default from 30 to 100.
	[Backport]
